ggml/30/ee1bf3c5b8e59269c5550c44b6a8ff4677f3c5/ggml-0-x86-cpu-low-perf/ctest_debug.log
+ cmake -DCMAKE_BUILD_TYPE=Debug ..
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- ccache found, compilation results will be cached. Disable with GGML_CCACHE=OFF.
-- CMAKE_SYSTEM_PROCESSOR: x86_64
-- Including CPU backend
-- Found OpenMP_C: -fopenmp (found version "4.5") 
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Adding CPU backend variant ggml-cpu: -march=native 
-- x86 detected
-- Linux detected
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ggml/work/ggml/build-ci-debug

real	0m0.603s
user	0m0.479s
sys	0m0.126s
+ make -j
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  2%] Building C object src/CMakeFiles/ggml-base.dir/ggml.c.o
[  3%] Building C object src/CMakeFiles/ggml-base.dir/ggml-alloc.c.o
[  4%] Building CXX object src/CMakeFiles/ggml-base.dir/ggml-backend.cpp.o
[  5%] Building CXX object src/CMakeFiles/ggml-base.dir/ggml-opt.cpp.o
[  6%] Building CXX object src/CMakeFiles/ggml-base.dir/ggml-threading.cpp.o
[  7%] Building C object src/CMakeFiles/ggml-base.dir/ggml-quants.c.o
[  8%] Linking CXX static library libcommon.a
[  8%] Built target common
[  9%] Linking CXX shared library libggml-base.so
[  9%] Built target ggml-base
[ 10%] Building C object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu.c.o
[ 11%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu.cpp.o
[ 12%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-aarch64.cpp.o
[ 13%] Building C object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-quants.c.o
[ 15%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-hbm.cpp.o
[ 14%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-traits.cpp.o
[ 16%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/amx/mmq.cpp.o
[ 17%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/amx/amx.cpp.o
[ 18%] Linking CXX shared library libggml-cpu.so
[ 18%] Built target ggml-cpu
[ 19%] Building CXX object src/CMakeFiles/ggml.dir/ggml-backend-reg.cpp.o
[ 20%] Linking CXX shared library libggml.so
[ 20%] Built target ggml
[ 21%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[ 23%] Building C object tests/CMakeFiles/test-vec1.dir/test-vec1.c.o
[ 23%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 24%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 25%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 26%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 27%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 28%] Linking C executable ../bin/test-vec0
[ 29%] Linking C executable ../bin/test-vec1
[ 30%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 31%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 32%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 33%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 33%] Built target test-vec1
[ 34%] Building CXX object tests/CMakeFiles/test-pad-reflect-1d.dir/test-pad-reflect-1d.cpp.o
[ 35%] Building CXX object tests/CMakeFiles/test-conv-transpose-1d.dir/test-conv-transpose-1d.cpp.o
[ 36%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 36%] Built target test-vec0
[ 37%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 38%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 39%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 40%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 41%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 42%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 43%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 44%] Building C object tests/CMakeFiles/test-cont.dir/test-cont.c.o
[ 45%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 46%] Building CXX object examples/mnist/CMakeFiles/mnist-common.dir/mnist-common.cpp.o
[ 47%] Building CXX object examples/sam/CMakeFiles/sam.dir/main.cpp.o
[ 48%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
[ 49%] Building CXX object examples/yolo/CMakeFiles/yolov3-tiny.dir/yolov3-tiny.cpp.o
[ 50%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 51%] Building CXX object examples/yolo/CMakeFiles/yolov3-tiny.dir/yolo-image.cpp.o
[ 52%] Linking C executable ../bin/test0
[ 53%] Linking C executable ../bin/test-mul-mat0
[ 54%] Linking CXX executable ../bin/test-arange
[ 55%] Linking C executable ../bin/test-pool
[ 56%] Linking C executable ../bin/test-dup
[ 57%] Linking C executable ../bin/test-rel-pos
[ 58%] Linking C executable ../bin/test-conv-transpose
[ 59%] Linking C executable ../bin/test-cont
[ 60%] Linking CXX executable ../bin/test-pad-reflect-1d
[ 61%] Linking C executable ../bin/test-customop
[ 61%] Built target test0
[ 61%] Built target test-mul-mat0
[ 61%] Built target test-pool
[ 61%] Built target test-rel-pos
[ 61%] Built target test-arange
[ 61%] Built target test-conv-transpose
[ 61%] Built target test-dup
[ 61%] Built target test-cont
[ 61%] Built target test-customop
[ 61%] Built target test-pad-reflect-1d
[ 62%] Linking CXX executable ../bin/test-timestep_embedding
[ 63%] Linking C executable ../bin/test-mul-mat2
[ 63%] Built target test-timestep_embedding
[ 63%] Built target test-mul-mat2
[ 64%] Linking CXX executable ../bin/test-quantize-fns
[ 64%] Built target test-quantize-fns
[ 65%] Linking CXX executable ../../bin/simple-backend
[ 66%] Linking CXX executable ../../bin/simple-ctx
[ 67%] Linking CXX executable ../bin/test-mul-mat
[ 68%] Linking CXX executable ../bin/test-conv1d
[ 68%] Built target simple-backend
[ 68%] Built target simple-ctx
[ 69%] Linking CXX executable ../bin/test-conv2d
[ 69%] Built target test-conv1d
[ 69%] Built target test-mul-mat
[ 69%] Built target test-conv2d
[ 70%] Linking CXX executable ../bin/test-conv-transpose-1d
[ 71%] Linking CXX executable ../bin/test-opt
[ 71%] Built target test-conv-transpose-1d
[ 71%] Built target test-opt
[ 72%] Linking CXX static library libmnist-common.a
/home/ggml/work/ggml/examples/common-ggml.cpp: In function ‘bool ggml_common_quantize_0(std::ifstream&, std::ofstream&, ggml_ftype, const std::vector<std::__cxx11::basic_string<char> >&, const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/ggml/work/ggml/examples/common-ggml.cpp:75:14: error: ‘GGML_FTYPE_MOSTLY_Q4_0_4_4’ was not declared in this scope; did you mean ‘GGML_FTYPE_MOSTLY_Q4_0’?
   75 |         case GGML_FTYPE_MOSTLY_Q4_0_4_4:
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |              GGML_FTYPE_MOSTLY_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:76:14: error: ‘GGML_FTYPE_MOSTLY_Q4_0_4_8’ was not declared in this scope; did you mean ‘GGML_FTYPE_MOSTLY_Q4_0’?
   76 |         case GGML_FTYPE_MOSTLY_Q4_0_4_8:
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |              GGML_FTYPE_MOSTLY_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:77:14: error: ‘GGML_FTYPE_MOSTLY_Q4_0_8_8’ was not declared in this scope; did you mean ‘GGML_FTYPE_MOSTLY_Q4_0’?
   77 |         case GGML_FTYPE_MOSTLY_Q4_0_8_8:
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |              GGML_FTYPE_MOSTLY_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:215:22: error: ‘GGML_TYPE_Q4_0_4_4’ was not declared in this scope; did you mean ‘GGML_TYPE_Q4_0’?
  215 |                 case GGML_TYPE_Q4_0_4_4:
      |                      ^~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:216:22: error: ‘GGML_TYPE_Q4_0_4_8’ was not declared in this scope; did you mean ‘GGML_TYPE_Q4_0’?
  216 |                 case GGML_TYPE_Q4_0_4_8:
      |                      ^~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:217:22: error: ‘GGML_TYPE_Q4_0_8_8’ was not declared in this scope; did you mean ‘GGML_TYPE_Q4_0’?
  217 |                 case GGML_TYPE_Q4_0_8_8:
      |                      ^~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:220:22: error: ‘GGML_TYPE_IQ4_NL_4_4’ was not declared in this scope; did you mean ‘GGML_TYPE_IQ4_NL’?
  220 |                 case GGML_TYPE_IQ4_NL_4_4:
      |                      ^~~~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_IQ4_NL
make[2]: *** [examples/CMakeFiles/common-ggml.dir/build.make:76: examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1065: examples/CMakeFiles/common-ggml.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 72%] Built target mnist-common
[ 73%] Linking CXX executable ../../bin/yolov3-tiny
[ 74%] Linking CXX executable ../bin/test-quantize-perf
[ 74%] Built target yolov3-tiny
[ 74%] Built target test-quantize-perf
[ 75%] Linking CXX executable ../../bin/sam
[ 75%] Built target sam
[ 76%] Linking CXX executable ../bin/test-backend-ops
[ 76%] Built target test-backend-ops
make: *** [Makefile:146: all] Error 2

real	0m10.569s
user	0m31.061s
sys	0m3.191s
